--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,16 +16,10 @@
         android:theme="@style/Theme.GymTracker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.activity.home.MainActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.home.MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.login.SplashScreen"
+            android:name=".ui.activity.login.SplashScreen"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GymTracker">
