--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" package="com.hilguener.gymtracker">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MainApplication"
+        android:name="com.hilguener.gymtracker.MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.GymTracker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.home.MainActivity"
+            android:name="com.hilguener.gymtracker.ui.activity.home.MainActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.activity.login.SplashScreen"
+            android:name="com.hilguener.gymtracker.ui.activity.login.SplashScreen"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GymTracker">
